--- a/index.css
+++ b/index.css
@@ -10,7 +10,7 @@
   src: url(fontes/idroid.otf) format(opentype);
 }
 body {
-  background-color: #041626;
+  background-color: #3B3840;
   min-width: 4OOpx;
   min-height: 800px;
   margin-bottom: 0cm;
