--- a/index.css
+++ b/index.css
@@ -17,8 +17,14 @@ body {
 }
 
 a {
+    
   text-decoration: none;
   color: #14141a;
+}
+
+a:hover {
+  color: #0cf2f2;
+  transition: color 0.3s;
 }
 
 header {
