--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ body {
 a {
     
   text-decoration: none;
-  color: #14141a;
+  color: #3B3840;
 }
 
 a:hover {
@@ -60,14 +60,14 @@ article {
   border-radius: 10px;
   padding: 20px;
   line-height: 1.5em;
-  background-color: #075f73;
+  background-color: #87878C;
   box-shadow: 2px 4px 5px 3px rgba(46, 45, 45, 0.438);
 }
 p {
   font-family: Arial, Helvetica, sans-serif;
   text-align: left;
   text-indent: 15px;
-  color: #ffffff;
+  color: #3B3840;
   padding: 5px;
 }
 #tema {
